# resume

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: app.db  resume.yaml
src/app/: __init__.py  __main__.py  app_factory.py  config.py  database.py  deps.py  models.py  resume_loader.py  schemas.py  utils.py
src/app/static/: app.js  style.css
src/app/templates/: base.html  index.html  wishlist.html
